tests/should_fail/unterminated_string.nds
-- String must terminate before newline.
set x to "hello world
